--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </style>
   <title>Sun and Sanders</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <link href="./css/style.css" rel="stylesheet" type="text/css">
+  <link href="./css/sun-and-sanders.webflow.a3b6c8caa.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/" rel="preconnect">
   <link href="https://fonts.gstatic.com/" rel="preconnect" crossorigin="anonymous">
   <script src="./js/webfont.js" type="text/javascript"></script>
@@ -30,8 +30,26 @@
       n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
     }(window, document);
   </script>
-  <link href="https://assets-global.website-files.com/6611bfe6e9ed2aedc3930918/6611dd6d4384e51f6198b396_SnS_Favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="https://assets-global.website-files.com/6611bfe6e9ed2aedc3930918/6611dd76f69a1654a53fcde8_SnS_Webclip.png" rel="apple-touch-icon">
+  <link href="./images/6611dd6d4384e51f6198b396_SnS_Favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="./images/6611dd76f69a1654a53fcde8_SnS_Webclip.png" rel="apple-touch-icon">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GTM-58R9QG79"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'GTM-58R9QG79');
+</script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CF60VYM82R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CF60VYM82R');
+</script>
 </head>
 
 <body>
