update social links

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="section-2">
     <div class="div-block-27">
       <div class="div-block-26"><img src="./images/6611c7199d96ffefe03aaaf7_SnS_logo_freehand.svg" width="147" alt="" class="logo-footer">
-        <div class="wrapper-list-links"><a href="https://sun-and-sanders.webflow.io/#" class="footer-links">Instagram</a><a href="https://sun-and-sanders.webflow.io/#" class="footer-links">Pinterest</a></div>
+        <div class="wrapper-list-links"><a href="https://www.instagram.com/sunandsanders/" class="footer-links" target="_blank">Instagram</a><a href="https://www.pinterest.com/sunandsanders1/" class="footer-links" target="_blank">Pinterest</a></div>
         <p class="small-p">© SUN AND SANDERS 2024</p>
       </div>
     </div>
