--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
     </div>
   </div>
   <script src="./js/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="./js/webflow.0d2cc6cc1.js" type="text/javascript"></script><a class="w-webflow-badge" href="https://webflow.com/?utm_campaign=brandjs"><img src="./images/webflow-badge-icon-d2.89e12c322e.svg" alt=""
-      style="margin-right: 4px; width: 26px;"></a>
-</body>
+  <script src="./js/webflow.0d2cc6cc1.js" type="text/javascript"></script>
 
 </html>
