--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <body>
   <div data-collapse="none" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav"><a href="https://sun-and-sanders.webflow.io/" aria-current="page" class="brand w-nav-brand w--current"
       aria-label="home"><img src="./images/6611c7199d96ffefe03aaaf7_SnS_logo_freehand.svg" width="Auto" height="100" alt=""></a>
-    <nav role="navigation" class="nav-menu w-nav-menu"><a href="https://sun-and-sanders.webflow.io/" aria-current="page" class="link-nav w-nav-link w--current">Home</a>
-        <!-- <a href="https://sun-and-sanders.webflow.io/about" class="link-nav w-nav-link">About</a> -->
-    </nav>
+    <!-- <nav role="navigation" class="nav-menu w-nav-menu"><a href="/" aria-current="page" class="link-nav w-nav-link w--current">Home</a>
+        <a href="/about" class="link-nav w-nav-link">About</a>
+    </nav> -->
     <div class="menu-button w-nav-button" style="-webkit-user-select: text;" aria-label="menu" role="button" tabindex="0" aria-controls="w-nav-overlay-0" aria-haspopup="menu" aria-expanded="false">
       <div class="w-icon-nav-menu"></div>
     </div>
